change menu's orientation to make sure it is completly visible

--- a/core/css/styles.scss
+++ b/core/css/styles.scss
@@ -778,6 +778,7 @@ code {
 		.menu {
 			top:100%;
 			margin:10px;
+			margin-left: 0px;
 			form {
 				display:flex;
 				margin:10px;
